Add show page, and edit album functionality

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,13 +1,16 @@
 <h1> Records: </h1>
 
-<table class="all_records">
+<table border = "1" class="all_records">
   <tr>
-    <th><th>
+    <th></th>
     <th>Genre</th>
     <th>Artist</th>
     <th>Album</th>
     <th>Year</th>
     <th>Quantity</th>
+    <th></th>
+    <th></th>
+    <th></th>
   </tr>
   <%= render @records %>
 </table>
