--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -5,4 +5,6 @@
   <td><%= record.album %></td>
   <td><%= record.year %></td>
   <td><%= record.quantity %></td>
+  <td><%= link_to "Show", record_path(record) %> </td>
+  <td><%= link_to "Edit", edit_record_path(record) %></td>
 </tr>
