add 'add a record' functionality.

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,5 +1,6 @@
 <h1> Records: </h1>
 
+<h3><%= link_to "Add a record", new_record_path %></h3>
 <table border = "1" class="all_records">
   <tr>
     <th></th>
