--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -7,4 +7,7 @@
   <td><%= record.quantity %></td>
   <td><%= link_to "Show", record_path(record) %> </td>
   <td><%= link_to "Edit", edit_record_path(record) %></td>
+  <td><%= link_to "Delete", record_path(record),
+          method: :delete,
+          data: { confirm: 'Are you sure?' } %> </td>
 </tr>
