--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,12 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <script src="sorttable.js"></script>
+
+
+
   </head>
 
   <body>
