--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Records: </h1>
 
 <h3><%= link_to "Add a record", new_record_path %></h3>
-<table border = "1" class="sortable">
+<table class="sortable">
   <tr>
     <th></th>
     <th>Genre</th>
