--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -5,9 +5,11 @@
   <td><%= record.album %></td>
   <td><%= record.year %></td>
   <td><%= record.quantity %></td>
-  <td><%= link_to "Show", record_path(record) %> </td>
-  <td><%= link_to "Edit", edit_record_path(record) %></td>
-  <td><%= link_to "Delete", record_path(record),
-          method: :delete,
-          data: { confirm: 'Are you sure?' } %> </td>
+  <% if logged_in? %>
+    <td><%= link_to "Show", record_path(record) %> </td>
+    <td><%= link_to "Edit", edit_record_path(record) %></td>
+    <td><%= link_to "Delete", record_path(record),
+            method: :delete,
+            data: { confirm: 'Are you sure?' } %> </td>
+  <% end %>
 </tr>
