--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,18 +1,34 @@
 <h1> Records: </h1>
 
-<h3><%= link_to "Add a record", new_record_path %></h3>
-<table class="sortable">
-  <tr>
-    <th></th>
-    <th>Genre</th>
-    <th>Artist</th>
-    <th>Album</th>
-    <th>Year</th>
-    <th>Quantity</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-  <%= render @records %>
-</table>
+
+<%= form_tag(records_path, :method => "get", id: "search-form") do %>
+  <%= text_field_tag :search, params[:search], placeholder: "Search Records" %>
+  <%= submit_tag "Search" %>
+<% end %>
+
+
+
+
+<br>
+
+<h3><%= link_to "New Record", new_record_path %></h3>
+<% if @records.present? %>
+  <table class="sortable">
+
+    <tr>
+      <th></th>
+      <th>Genre</th>
+      <th>Artist</th>
+      <th>Album</th>
+      <th>Year</th>
+      <th>Quantity</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+    <%= render @records %>
+  </table>
+<% else %>
+ <p> Sorry, that record doesn't seem to be in the list! </p>
+<% end %>
 <br>
