--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,21 +1,21 @@
-<h3> New Record </h3>
+<h3> Add A Record </h3>
 
-<%= form_for(@record) do |f| %>
-  <%= f.label       :genre %>
-  <%= f.text_field  :genre%>
+<%= form_for(@record, :html => {class: 'form-container'}) do |f| %>
+  <%= f.label       :genre, :class => 'form-title' %>
+  <%= f.text_field  :genre, :class => 'form-field'%>
   <br>
-  <%= f.label       :artist %>
-  <%= f.text_field  :artist %>
+  <%= f.label       :artist, :class => 'form-title' %>
+  <%= f.text_field  :artist, :class => 'form-field' %>
   <br><br>
-  <%= f.label       :album %>
-  <%= f.text_field  :album %>
+  <%= f.label       :album, :class => 'form-title' %>
+  <%= f.text_field  :album, :class => 'form-field' %>
   <br><br>
-  <%= f.label       :year %>
-  <%= f.text_field  :year %>
+  <%= f.label       :year, :class => 'form-title' %>
+  <%= f.text_field  :year, :class => 'form-field' %>
   <br><br>
-  <%= f.label       :quantity %>
-  <%= f.text_field  :quantity %>
+  <%= f.label       :quantity, :class => 'form-title' %>
+  <%= f.text_field  :quantity, :class => 'form-field' %>
   <br><br>
   <%= f.hidden_field  :user_id, :value => 1 %>
-  <%= f.submit %>
+  <%= f.submit :class => 'submit-button' %>
 <% end %>
