--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,29 +17,78 @@
  *= require_self
  */
 
- body {
-   padding: 20px;
-   background-color: white;
+
+body, header {
+   margin-left: 20px;
+   margin-right: 20px;
+   background-color: #536c8d;
   }
 
-  .container, header {
-  margin: 0 auto;
-  background-color: white;
-  max-width: 600px;
+.container, header {
+    margin: 0 auto;
+    background-color: white;
+    max-width: 80%;
+    padding-left: 20px;
+    padding-right: 20px
+  }
+
+header {
+  margin-top: 10px;
+  border-bottom-width: 10px;
+  border-bottom-style: solid;
+  border-bottom-color: #62a07b;
 }
 
+.images {
+  display: inline-block;
+  width: auto;
+  }
+
+#records-header {
+  max-width: 43%;
+  max-height: 43%;
+  float: right;
+  padding-top: 15px;
+
+  }
+
+#wombat-header {
+  max-width: 38%;
+  max-height: 38%;
+  float: left;
+  padding-top: 15px;
+
+  }
+
+#logo {
+  max-width: 18%;
+  max-height: 18%;
+
+}
+
+th {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+h1 {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+
+tr:nth-child(even) {background-color: #f2f2f2}
+
 .form-container {
-   border: 1px solid #f2e3d2;
-   background: #c9b7a2;
-   background: -webkit-gradient(linear, left top, left bottom, from(#f2e3d2), to(#c9b7a2));
-   background: -webkit-linear-gradient(top, #f2e3d2, #c9b7a2);
-   background: -moz-linear-gradient(top, #f2e3d2, #c9b7a2);
-   background: -ms-linear-gradient(top, #f2e3d2, #c9b7a2);
-   background: -o-linear-gradient(top, #f2e3d2, #c9b7a2);
-   background-image: -ms-linear-gradient(top, #f2e3d2 0%, #c9b7a2 100%);
-   -webkit-border-radius: 8px;
-   -moz-border-radius: 8px;
-   border-radius: 8px;
+   border: 1px solid #536c8d;
+   background: #4f8b89;
+   background: -webkit-gradient(linear, left top, left bottom, from(#62a07b), to(#4f8b89));
+   background: -webkit-linear-gradient(top, #62a07b, #4f8b89);
+   background: -moz-linear-gradient(top, #62a07b, #4f8b89);
+   background: -ms-linear-gradient(top, #62a07b, #4f8b89);
+   background: -o-linear-gradient(top, #62a07b, #4f8b89);
+   background-image: -ms-linear-gradient(top, #62a07b 0%, #4f8b89 100%);
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
    -webkit-box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
    -moz-box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
    box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
@@ -51,12 +100,12 @@
    width:300px;
    }
 .form-field {
-   border: 1px solid #c9b7a2;
-   background: #e4d5c3;
+   border: 1px solid #ffffff;
+   background: #ffffff;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
-   color: #c9b7a2;
+   color: #b8b1aa;
    -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
    -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
    box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
@@ -69,7 +118,7 @@
    color: #725129;
    }
 .form-container h2 {
-   text-shadow: #fdf2e4 0 1px 0;
+   text-shadow: #6291ba 0 1px 0;
    font-size:18px;
    margin: 0 0 10px 0;
    font-weight:bold;
@@ -77,30 +126,30 @@
     }
 .form-title {
    margin-bottom:10px;
-   color: #725129;
-   text-shadow: #fdf2e4 0 1px 0;
+   color: #062e63;
+   text-shadow: #6291ba 0 1px 0;
    }
 .submit-container {
    margin:8px 0;
    text-align:right;
    }
 .submit-button {
-   border: 1px solid #447314;
-   background: #6aa436;
-   background: -webkit-gradient(linear, left top, left bottom, from(#8dc059), to(#6aa436));
-   background: -webkit-linear-gradient(top, #8dc059, #6aa436);
-   background: -moz-linear-gradient(top, #8dc059, #6aa436);
-   background: -ms-linear-gradient(top, #8dc059, #6aa436);
-   background: -o-linear-gradient(top, #8dc059, #6aa436);
-   background-image: -ms-linear-gradient(top, #8dc059 0%, #6aa436 100%);
-   -webkit-border-radius: 4px;
-   -moz-border-radius: 4px;
-   border-radius: 4px;
-   -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
-   -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
-   box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
-   text-shadow: #addc7e 0 1px 0;
-   color: #31540c;
+   border: 0px solid #030500;
+   background: #536c8d;
+   background: -webkit-gradient(linear, left top, left bottom, from(#536c8d), to(#536c8d));
+   background: -webkit-linear-gradient(top, #536c8d, #536c8d);
+   background: -moz-linear-gradient(top, #536c8d, #536c8d);
+   background: -ms-linear-gradient(top, #536c8d, #536c8d);
+   background: -o-linear-gradient(top, #536c8d, #536c8d);
+   background-image: -ms-linear-gradient(top, #536c8d 0%, #536c8d 100%);
+   -webkit-border-radius: 11px;
+   -moz-border-radius: 11px;
+   border-radius: 11px;
+   -webkit-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
+   -moz-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
+   box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
+   text-shadow: #636363 0 1px 0;
+   color: #434652;
    font-family: helvetica, serif;
    padding: 8.5px 18px;
    font-size: 14px;
@@ -108,7 +157,7 @@
    vertical-align: middle;
    }
 .submit-button:hover {
-   border: 1px solid #447314;
+   border: 0px solid #447314;
    text-shadow: #31540c 0 1px 0;
    background: #6aa436;
    background: -webkit-gradient(linear, left top, left bottom, from(#8dc059), to(#6aa436));
@@ -121,7 +170,7 @@
    }
 .submit-button:active {
    text-shadow: #31540c 0 1px 0;
-   border: 1px solid #447314;
+   border: 0px solid #447314;
    background: #8dc059;
    background: -webkit-gradient(linear, left top, left bottom, from(#6aa436), to(#6aa436));
    background: -webkit-linear-gradient(top, #6aa436, #8dc059);
