--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,15 @@
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <script src="sorttable.js"></script>
     <header>
+      <div class='images'>
+        <img id='wombat-header' src=<%= image_url('wombat.png') %> alt="Wombat">
+        <img id='logo' src=<%= image_url('logo.png') %> alt="Wombat">
+        <img id='records-header' src=<%= image_url('records.png')  %> alt="Wombat">
+      </div>
       <nav>
         <a class="active" href="/">Home</a> |
         <% if logged_in? %>
-          
+
           <a href="/logout">Logout</a>
         <% else %>
           <a href="/login">Login</a>
