--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -6,9 +6,9 @@
   <td><%= record.year %></td>
   <td><%= record.quantity %></td>
   <% if logged_in? %>
-    <td><%= link_to "Show", record_path(record) %> </td>
-    <td><%= link_to "Edit", edit_record_path(record) %></td>
-    <td><%= link_to "Delete", record_path(record),
+    <td><%= button_to "Show", record_path(record), method: :get %> </td>
+    <td><%= button_to "Edit", edit_record_path(record), method: :get %></td>
+    <td><%= button_to "Delete", record_path(record),
             method: :delete,
             data: { confirm: 'Are you sure?' } %> </td>
   <% end %>
