--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -3,13 +3,14 @@
     <%= text_field_tag :search, params[:search], placeholder: "Search Records" %>
     <%= submit_tag "Search" %>
   <% end %>
+
+<% if logged_in? %>
 <br>
-  <%= link_to "Add a new record!", new_record_path %>
-
-<br><br>
-
-
+  <%= button_to "ADD A RECORD", new_record_path, method: :get %>
+<% end %>
+<br>
 <% if @records.present? %>
+<div style="overflow-x:auto;">
   <table class="sortable">
     <tr>
       <th></th>
@@ -17,13 +18,14 @@
       <th>Artist</th>
       <th>Album</th>
       <th>Year</th>
-      <th>Quantity</th>
+      <th>Qty</th>
       <th></th>
       <th></th>
       <th></th>
     </tr>
     <%= render @records %>
   </table>
+</div>
 <% else %>
  <p> Sorry, that record doesn't seem to be in the list! </p>
 <% end %>
