--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,5 +1,6 @@
-<h1> Genre: <%= @record.genre %></h1>
-<h1> Artist: <%= @record.artist %> </h1>
-<h1> Album: <%= @record.album %></h1>
-<h1> Year: <%= @record.year %> </h1>
-<h3> Quantity: <%= @record.quantity %> </h1>
+<h1> About this record: </h1>
+<p><em> Genre: </em><%= @record.genre %></p>
+<p> <em>Artist:</em> <%= @record.artist %> </p>
+<p> <em>Album:</em> <%= @record.album %></p>
+<p> <em>Year:</em> <%= @record.year %> </p>
+<p> <em>Quantity:</em> <%= @record.quantity %> </p>
