--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -6,7 +6,7 @@
   <td><%= record.year %></td>
   <td><%= record.quantity %></td>
   <% if logged_in? %>
-    <td><%= button_to "Show", record_path(record), method: :get %> </td>
+    <td><%= button_to "Show", record_songs_path(record), method: :get %> </td>
     <td><%= button_to "Edit", edit_record_path(record), method: :get %></td>
     <td><%= button_to "Delete", record_path(record),
             method: :delete,
