--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,9 +34,13 @@ body, header {
 
 header {
   margin-top: 10px;
-  border-bottom-width: 10px;
+  border-bottom-width: 5px;
   border-bottom-style: solid;
   border-bottom-color: #62a07b;
+}
+
+nav {
+  padding-bottom: 5px;
 }
 
 .images {
@@ -66,16 +70,34 @@ header {
 
 }
 
+.page {
+  padding-bottom: 20px;
+}
+
 th {
   font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
-h1 {
+h1, h2, h3 {
   font-family: "Comic Sans MS", cursive, sans-serif;
+  padding-top: 10px;
+  margin-top: 0
 }
 
 
 tr:nth-child(even) {background-color: #f2f2f2}
+
+.add-thing {
+  background-color: #9d9394; /* Green */
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+  border-radius: 5px;
+}
 
 .form-container {
    border: 1px solid #536c8d;
@@ -134,28 +156,17 @@ tr:nth-child(even) {background-color: #f2f2f2}
    text-align:right;
    }
 .submit-button {
-   border: 0px solid #030500;
-   background: #536c8d;
-   background: -webkit-gradient(linear, left top, left bottom, from(#536c8d), to(#536c8d));
-   background: -webkit-linear-gradient(top, #536c8d, #536c8d);
-   background: -moz-linear-gradient(top, #536c8d, #536c8d);
-   background: -ms-linear-gradient(top, #536c8d, #536c8d);
-   background: -o-linear-gradient(top, #536c8d, #536c8d);
-   background-image: -ms-linear-gradient(top, #536c8d 0%, #536c8d 100%);
-   -webkit-border-radius: 11px;
-   -moz-border-radius: 11px;
-   border-radius: 11px;
-   -webkit-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
-   -moz-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
-   box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
-   text-shadow: #636363 0 1px 0;
-   color: #434652;
-   font-family: helvetica, serif;
-   padding: 8.5px 18px;
-   font-size: 14px;
+   background-color: #4CAF50; /* Green */
+   border: none;
+   color: white;
+   padding: 5px 10px;
+   text-align: center;
    text-decoration: none;
-   vertical-align: middle;
+   display: inline-block;
+   font-size: 10px;
+   border-radius: 8px;
    }
+
 .submit-button:hover {
    border: 0px solid #447314;
    text-shadow: #31540c 0 1px 0;
