--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,32 +1,34 @@
-<br>
+<div class="page">
+  <br>
   <%= form_tag(records_path, :method => "get", id: "search-form") do %>
     <%= text_field_tag :search, params[:search], placeholder: "Search Records" %>
     <%= submit_tag "Search" %>
   <% end %>
 
-<% if logged_in? %>
-<br>
-  <%= button_to "ADD A RECORD", new_record_path, method: :get %>
-<% end %>
-<br>
-<% if @records.present? %>
-<div style="overflow-x:auto;">
-  <table class="sortable">
-    <tr>
-      <th></th>
-      <th>Genre</th>
-      <th>Artist</th>
-      <th>Album</th>
-      <th>Year</th>
-      <th>Qty</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-    <%= render @records %>
-  </table>
-</div>
-<% else %>
- <p> Sorry, that record doesn't seem to be in the list! </p>
-<% end %>
+  <% if logged_in? %>
+  <br>
+    <%= button_to "ADD A RECORD", new_record_path, method: :get, class: "add-thing" %>
+  <% end %>
+  <br>
+  <% if @records.present? %>
+  <div style="overflow-x:auto;">
+    <table class="sortable">
+      <tr>
+        <th></th>
+        <th>Genre</th>
+        <th>Artist</th>
+        <th>Album</th>
+        <th>Year</th>
+        <th>Qty</th>
+        <th></th>
+        <th></th>
+        <th></th>
+      </tr>
+      <%= render @records %>
+    </table>
+  </div>
+  <% else %>
+   <p> Sorry, that record doesn't seem to be in the list! </p>
+  <% end %>
+  </div>
 </div>
