--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,21 +1,24 @@
-<h3> Add A Record </h3>
+<div class="page">
 
-<%= form_for(@record, :html => {class: 'form-container'}) do |f| %>
-  <%= f.label       :genre, :class => 'form-title' %>
-  <%= f.text_field  :genre, :class => 'form-field'%>
-  <br>
-  <%= f.label       :artist, :class => 'form-title' %>
-  <%= f.text_field  :artist, :class => 'form-field' %>
-  <br><br>
-  <%= f.label       :album, :class => 'form-title' %>
-  <%= f.text_field  :album, :class => 'form-field' %>
-  <br><br>
-  <%= f.label       :year, :class => 'form-title' %>
-  <%= f.text_field  :year, :class => 'form-field' %>
-  <br><br>
-  <%= f.label       :quantity, :class => 'form-title' %>
-  <%= f.text_field  :quantity, :class => 'form-field' %>
-  <br><br>
-  <%= f.hidden_field  :user_id, :value => 1 %>
-  <%= f.submit :class => 'submit-button' %>
-<% end %>
+  <h2> Add a new record: </h2>
+
+  <%= form_for(@record, :html => {class: 'form-container'}) do |f| %>
+    <%= f.label       :genre, :class => 'form-title' %>
+    <%= f.text_field  :genre, :class => 'form-field'%>
+    <br>
+    <%= f.label       :artist, :class => 'form-title' %>
+    <%= f.text_field  :artist, :class => 'form-field' %>
+    <br><br>
+    <%= f.label       :album, :class => 'form-title' %>
+    <%= f.text_field  :album, :class => 'form-field' %>
+    <br><br>
+    <%= f.label       :year, :class => 'form-title' %>
+    <%= f.text_field  :year, :class => 'form-field' %>
+    <br><br>
+    <%= f.label       :quantity, :class => 'form-title' %>
+    <%= f.text_field  :quantity, :class => 'form-field' %>
+    <br><br>
+    <%= f.hidden_field  :user_id, :value => 1 %>
+    <%= f.submit :class => 'submit-button' %>
+  <% end %>
+</div>
