--- a/app/views/songs/_song.html.erb
+++ b/app/views/songs/_song.html.erb
@@ -1,13 +1,11 @@
-<% p "$$$$$$$$$$$$$" %>
-<% p params%>
-<% p "$$$$$$" %>
 <tr>
   <td></td>
   <td><%= song.title %></td>
   <% if logged_in? %>
-    <td><%= button_to "Edit", edit_song_path(song), method: :get %></td>
+    <td><%= button_to "Edit", edit_song_path(song), method: :get, class: "submit-button" %></td>
     <td><%= button_to "Delete", song_path(song),
             method: :delete,
-            data: { confirm: 'Are you sure?' } %> </td>
+            data: { confirm: 'Are you sure?' },
+            class: "submit-button" %> </td>
   <% end %>
 </tr>
