--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,9 +1,11 @@
-<h3> Edit a song </h3>
-<% p params %>
-<%= form_for([@record,@song], :html => {class: 'form-container'}) do |f| %>
-  <%= f.label       :title, :class => 'form-title' %>
-  <%= f.text_field  :title, :class => 'form-field'%>
-  <br>
-  <%= f.hidden_field  :record_id, :value => @song.record_id %>
-  <%= f.submit "Update Song", :class => 'submit-button' %>
-<% end %>
+<div class="page">
+  <h3> Edit a song </h3>
+  <% p params %>
+  <%= form_for([@record,@song], :html => {class: 'form-container'}) do |f| %>
+    <%= f.label       :title, :class => 'form-title' %>
+    <%= f.text_field  :title, :class => 'form-field'%>
+    <br>
+    <%= f.hidden_field  :record_id, :value => @song.record_id %>
+    <%= f.submit "Update Song", :class => 'submit-button' %>
+  <% end %>
+</div>
