--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -156,7 +156,7 @@ tr:nth-child(even) {background-color: #f2f2f2}
    text-align:right;
    }
 .submit-button {
-   background-color: #4CAF50; /* Green */
+   background-color: ##9d9394; /* Green */
    border: none;
    color: white;
    padding: 5px 10px;
