--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 
   <% if @song.present? %>
-  <h3> Record Songs: <h3>
+  <h2 margin: 0 auto> Album Songs: <h2>
   <div style = "overflow-x:auto;">
     <table class="sortable">
       <tr>
