left align songs-table

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -12,7 +12,7 @@
   <br>
   <% if @records.present? %>
   <div style="overflow-x:auto;">
-    <table class="sortable">
+    <table class="main-table sortable">
       <tr>
         <th></th>
         <th>Genre</th>
