--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -17,7 +17,7 @@
     <table class="sortable">
       <tr>
         <th></th>
-        <th>Songs</th>
+        <th><h2>Songs</h2></th>
         <th></th>
         <th></th>
         <th></th>
